<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_profile_picture"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/user_full_name_placeholder" />

            <TextView
                android:id="@+id/post_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/post_date_placeholder" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/post_title_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/post_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_body_placeholder"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>